--- a/PYR1-1157.org
+++ b/PYR1-1157.org
@@ -24,3 +24,11 @@ Did using the user-agent make the api not throttle us our requests as much?
 * TODO consider filtering r^(MesoWest|RAWS|ASOS)$ to "provider" requires feature flag  -H 'Feature-Flags: obs_station_provider' > CA_stations_0.geojson" (not sure state bit is necessary)
 * DONE add svg icon and png
 * TODO fetching the latest observation on the frontend just considers the happy path: e.g doesn't handly none-200 or slow responses.
+* TODO ask someone how many sig figs for observation latest aka relative humidity shows like 75..34343
+
+
+
+potential improvements to get-observations stations:
+1. turn into transducer
+2. error handling on none 200
+3. store cache refresh time so we can check it
