note we filtered.

--- a/PYR1-1157.org
+++ b/PYR1-1157.org
@@ -1,7 +1,2 @@
 * DOING Zoom to WS-icon when WS-svg clicked
-* DOING consider filtering r^(MesoWest|RAWS|ASOS)$ to "provider" requires feature flag  -H 'Feature-Flags: obs_station_provider' > CA_stations_0.geojson" (not sure state bit is necessary)
-* DONE Cache station results because they take too long.
-* DONE add svg icon and png
-* DONE fetching the latest observation on the frontend just considers the happy path: e.g doesn't handly none-200 or slow responses.
-* DONE Unmock API and WS-geo-info the same way camera-geo-info is to create a map.
-* DONE Display WS-info when WS-svg clicked.
+* DONE consider filtering r^(MesoWest|RAWS|ASOS)$ to "provider" requires feature flag  -H 'Feature-Flags: obs_station_provider' > CA_stations_0.geojson" (not sure state bit is necessary)
